crates/ink/tests/ui/trait_def/fail/definition_non_pub.rs
use ink_lang as ink;

#[ink::trait_definition]
trait TraitDefinition {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
